# LaborMarketABM

./: README.md  pyproject.toml
labor_model/: batch.py  company_agent.py  company_agent_base.py  company_llm_agent.py  config.py  employee_agent.py  llm_deciding.py  local_logging.py  main.py  model.py  stats.py  step_stats_collector.py  utils.py  visualize.py
